refacto 1