@@ -16,7 +16,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Service for managing applied harmonised standards.
@@ -86,7 +85,7 @@ public class AppliedStandardService {
     public List<AppliedStandardResponse> findByProductId(UUID productId) {
         UUID orgId = TenantContext.getOrgId();
         return appliedStandardRepository.findAllByProductIdAndOrgId(productId, orgId).stream()
-                .map(this::toResponse).collect(Collectors.toList());
+                .map(this::toResponse).toList();
     }
 
     public void delete(UUID standardId) {
