@@ -17,7 +17,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Service for managing Coordinated Vulnerability Disclosure (CVD) policies.
@@ -99,7 +98,7 @@ public class CvdPolicyService {
     public List<CvdPolicyResponse> findAll() {
         UUID orgId = TenantContext.getOrgId();
         return cvdPolicyRepository.findAllByOrgId(orgId).stream()
-                .map(this::toResponse).collect(Collectors.toList());
+                .map(this::toResponse).toList();
     }
 
     public CvdPolicyResponse publish(UUID productId) {
