@@ -23,7 +23,6 @@ import java.util.HexFormat;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -98,7 +97,7 @@ public class EvidenceService {
         UUID orgId = TenantContext.getOrgId();
         return evidenceRepository.findAllByReleaseIdAndOrgId(releaseId, orgId).stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
