@@ -18,7 +18,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -69,7 +68,7 @@ public class SecurityAdvisoryService {
     public List<SecurityAdvisoryResponse> list() {
         UUID orgId = TenantContext.getOrgId();
         return advisoryRepository.findAllByOrgId(orgId).stream()
-                .map(this::toResponse).collect(Collectors.toList());
+                .map(this::toResponse).toList();
     }
 
     @Transactional(readOnly = true)
