@@ -23,7 +23,6 @@ import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
@@ -69,7 +68,7 @@ public class WebhookService {
     public List<WebhookResponse> list() {
         UUID orgId = TenantContext.getOrgId();
         return webhookRepository.findAllByOrgId(orgId).stream()
-                .map(this::toResponse).collect(Collectors.toList());
+                .map(this::toResponse).toList();
     }
 
     public void delete(UUID id) {
