@@ -9,7 +9,6 @@ import org.springframework.stereotype.Repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 public class AuditEventRepositoryAdapter implements AuditEventRepository {
@@ -32,13 +31,13 @@ public class AuditEventRepositoryAdapter implements AuditEventRepository {
     @Override
     public List<AuditEvent> findAllByOrgIdOrderByCreatedAt(UUID orgId) {
         return jpa.findAllByOrgIdOrderByCreatedAtAsc(orgId).stream()
-                .map(mapper::toDomain).collect(Collectors.toList());
+                .map(mapper::toDomain).toList();
     }
 
     @Override
     public List<AuditEvent> findAllByEntityTypeAndEntityIdOrderByCreatedAt(String entityType, UUID entityId) {
         return jpa.findAllByEntityTypeAndEntityIdOrderByCreatedAtAsc(entityType, entityId).stream()
-                .map(mapper::toDomain).collect(Collectors.toList());
+                .map(mapper::toDomain).toList();
     }
 
     @Override
@@ -54,6 +53,6 @@ public class AuditEventRepositoryAdapter implements AuditEventRepository {
     @Override
     public List<AuditEvent> findByOrgIdOrderByCreatedAtAsc(UUID orgId, int page, int size) {
         return jpa.findByOrgIdPaged(orgId, org.springframework.data.domain.PageRequest.of(page, size)).stream()
-                .map(mapper::toDomain).collect(Collectors.toList());
+                .map(mapper::toDomain).toList();
     }
 }
