@@ -2,41 +2,42 @@ package com.lexsecura.infrastructure.persistence;
 
 import com.lexsecura.domain.model.CraChecklistItem;
 import com.lexsecura.domain.repository.CraChecklistRepository;
-import com.lexsecura.infrastructure.persistence.entity.CraChecklistItemEntity;
 import com.lexsecura.infrastructure.persistence.jpa.JpaCraChecklistItemRepository;
+import com.lexsecura.infrastructure.persistence.mapper.PersistenceMapper;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Repository
 public class CraChecklistRepositoryAdapter implements CraChecklistRepository {
 
     private final JpaCraChecklistItemRepository jpa;
+    private final PersistenceMapper mapper;
 
-    public CraChecklistRepositoryAdapter(JpaCraChecklistItemRepository jpa) {
+    public CraChecklistRepositoryAdapter(JpaCraChecklistItemRepository jpa, PersistenceMapper mapper) {
         this.jpa = jpa;
+        this.mapper = mapper;
     }
 
     @Override
     public CraChecklistItem save(CraChecklistItem item) {
-        return toDomain(jpa.save(toEntity(item)));
+        return mapper.toDomain(jpa.save(mapper.toEntity(item)));
     }
 
     @Override
     public Optional<CraChecklistItem> findByIdAndOrgId(UUID id, UUID orgId) {
-        return jpa.findByIdAndOrgId(id, orgId).map(this::toDomain);
+        return jpa.findByIdAndOrgId(id, orgId).map(mapper::toDomain);
     }
 
     @Override
     public List<CraChecklistItem> findAllByProductIdAndOrgId(UUID productId, UUID orgId) {
         return jpa.findAllByProductIdAndOrgIdOrderByRequirementRef(productId, orgId)
-                .stream().map(this::toDomain).collect(Collectors.toList());
+                .stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public Optional<CraChecklistItem> findByProductIdAndRequirementRef(UUID productId, String requirementRef) {
-        return jpa.findByProductIdAndRequirementRef(productId, requirementRef).map(this::toDomain);
+        return jpa.findByProductIdAndRequirementRef(productId, requirementRef).map(mapper::toDomain);
     }
 
     @Override
@@ -47,43 +48,5 @@ public class CraChecklistRepositoryAdapter implements CraChecklistRepository {
     @Override
     public long countByProductIdAndOrgIdAndStatus(UUID productId, UUID orgId, String status) {
         return jpa.countByProductIdAndOrgIdAndStatus(productId, orgId, status);
-    }
-
-    private CraChecklistItem toDomain(CraChecklistItemEntity e) {
-        CraChecklistItem m = new CraChecklistItem();
-        m.setId(e.getId());
-        m.setOrgId(e.getOrgId());
-        m.setProductId(e.getProductId());
-        m.setRequirementRef(e.getRequirementRef());
-        m.setCategory(e.getCategory());
-        m.setTitle(e.getTitle());
-        m.setDescription(e.getDescription());
-        m.setStatus(e.getStatus());
-        m.setEvidenceIds(e.getEvidenceIds() != null ? Arrays.asList(e.getEvidenceIds()) : List.of());
-        m.setNotes(e.getNotes());
-        m.setAssessedBy(e.getAssessedBy());
-        m.setAssessedAt(e.getAssessedAt());
-        m.setCreatedAt(e.getCreatedAt());
-        m.setUpdatedAt(e.getUpdatedAt());
-        return m;
-    }
-
-    private CraChecklistItemEntity toEntity(CraChecklistItem m) {
-        CraChecklistItemEntity e = new CraChecklistItemEntity();
-        e.setId(m.getId());
-        e.setOrgId(m.getOrgId());
-        e.setProductId(m.getProductId());
-        e.setRequirementRef(m.getRequirementRef());
-        e.setCategory(m.getCategory());
-        e.setTitle(m.getTitle());
-        e.setDescription(m.getDescription());
-        e.setStatus(m.getStatus());
-        e.setEvidenceIds(m.getEvidenceIds() != null ? m.getEvidenceIds().toArray(new UUID[0]) : new UUID[0]);
-        e.setNotes(m.getNotes());
-        e.setAssessedBy(m.getAssessedBy());
-        e.setAssessedAt(m.getAssessedAt());
-        e.setCreatedAt(m.getCreatedAt());
-        e.setUpdatedAt(m.getUpdatedAt());
-        return e;
     }
 }
