@@ -2,37 +2,34 @@ package com.lexsecura.infrastructure.persistence;
 
 import com.lexsecura.domain.model.ReleaseComponent;
 import com.lexsecura.domain.repository.ReleaseComponentRepository;
-import com.lexsecura.infrastructure.persistence.entity.ReleaseComponentEntity;
 import com.lexsecura.infrastructure.persistence.jpa.JpaReleaseComponentRepository;
+import com.lexsecura.infrastructure.persistence.mapper.PersistenceMapper;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 public class ReleaseComponentRepositoryAdapter implements ReleaseComponentRepository {
 
     private final JpaReleaseComponentRepository jpa;
+    private final PersistenceMapper mapper;
 
-    public ReleaseComponentRepositoryAdapter(JpaReleaseComponentRepository jpa) {
+    public ReleaseComponentRepositoryAdapter(JpaReleaseComponentRepository jpa, PersistenceMapper mapper) {
         this.jpa = jpa;
+        this.mapper = mapper;
     }
 
     @Override
     public ReleaseComponent save(ReleaseComponent rc) {
-        var entity = new ReleaseComponentEntity();
-        entity.setId(rc.getId());
-        entity.setReleaseId(rc.getReleaseId());
-        entity.setComponentId(rc.getComponentId());
-        entity.setCreatedAt(rc.getCreatedAt());
+        var entity = mapper.toEntity(rc);
         entity = jpa.save(entity);
-        return toDomain(entity);
+        return mapper.toDomain(entity);
     }
 
     @Override
     public List<ReleaseComponent> findAllByReleaseId(UUID releaseId) {
-        return jpa.findAllByReleaseId(releaseId).stream().map(this::toDomain).collect(Collectors.toList());
+        return jpa.findAllByReleaseId(releaseId).stream().map(mapper::toDomain).toList();
     }
 
     @Override
@@ -43,14 +40,5 @@ public class ReleaseComponentRepositoryAdapter implements ReleaseComponentReposi
     @Override
     public boolean existsByReleaseIdAndComponentId(UUID releaseId, UUID componentId) {
         return jpa.existsByReleaseIdAndComponentId(releaseId, componentId);
-    }
-
-    private ReleaseComponent toDomain(ReleaseComponentEntity e) {
-        ReleaseComponent rc = new ReleaseComponent();
-        rc.setId(e.getId());
-        rc.setReleaseId(e.getReleaseId());
-        rc.setComponentId(e.getComponentId());
-        rc.setCreatedAt(e.getCreatedAt());
-        return rc;
     }
 }
